# charter

./: .gitignore  Makefile  README.md  noxfile.py  pyproject.toml
charter/: __about__.py  __init__.py  _exc.py  _ops.py  _predicate.py
charter/_backends/: __init__.py  interface.py  pymongo.py  sqlalchemy.py
docs/: index.md
tests/test__ops/: test_dataclasses.py
tests/test_backend/test_pymongo/: conftest.py  test_backend.py
tests/test_backend/test_sqlalchemy/: conftest.py  test_backend.py  test_backend_not_available.py  test_errors.py
tests/test_predicate/: test.py  test_demo.py  test_performance.py
