[project]
name = "charter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Bakyt Niiazaliev", email = "bakyt.worker@gmail.com" }]
dependencies = []

[project.optional-dependencies]
sqlalchemy = ["sqlalchemy>=2.0.41"]
pymongo = ["pymongo>=4.13.2"]

[dependency-groups]
dev = [{ include-group = "test" }, { include-group = "lint" }]
test = ["pytest>=8.4.1", "pytest-cov>=6.2.1"]
nox = ["nox>=2025.5.1"]
lint = ["mypy>=1.17.0", "ruff>=0.12.5"]

[tool.mypy]
strict = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.pytest.ini_options]
addopts = [
    "--cov=charter",
    "-vvv",
    "--cov-report=xml:test_results/coverage.xml",
    "--junitxml=test_results/test-report.xml",
    "--tb=short",
    "--cov-report=term",
    "--cov-report=term-missing",
]
testpaths = ["tests"]
